# whatsappbot_amd

./: .gitignore  pyproject.toml  run.py  setup_project.sh
whatsapp_bot/app/: main.py
whatsapp_bot/app/routes/: webhook.py
whatsapp_bot/app/services/: firestore_service.py  nlp_service.py  sessions.py  whatsapp_service.py
